--- a/Web-AppDevelopment.html
+++ b/Web-AppDevelopment.html
@@ -105,7 +105,7 @@
       </a>
 
       <!-- Toggler Button -->
-  <button class="btn btn-red navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
+ <button class="btn btn-red navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
   <i class="fa-solid fa-bars"></i>
 </button>
 
@@ -259,7 +259,7 @@
 
     <!-- INFO CANVAS -->
     <!-- OFFCANVAS -->
-    <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
+    <div class="offcanvas offcanvas-top1" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
         <div class="offcanvas-header container">
             <h5 class="offcanvas-title" id="offcanvasTopLabel">
                 <a class="navbar-brand" href="#">
@@ -298,7 +298,7 @@
 
                     <!--  -->
                     <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Portfolio</a>
+                          <a class="nav-link" href="portfolio.html">Portfolio</a>
                         <span class="navhover"></span>
                     </li>
                     <li class="nav-item">
