--- a/schedulemeeting.html
+++ b/schedulemeeting.html
@@ -22,6 +22,11 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <title>Contact Us | Intelligent & Cyber Secure Solutions</title>
+  <style>
+    .h20{
+      height: 40vh;
+    }
+  </style>
 </head>
 
 <body>
@@ -100,7 +105,7 @@ Windermere, Windermere, FL34786, USA
       </a>
 
       <!-- Toggler Button -->
-  <button class="btn btn-red navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
+ <button class="btn btn-red navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
   <i class="fa-solid fa-bars"></i>
 </button>
 
@@ -228,187 +233,77 @@ Windermere, Windermere, FL34786, USA
   
   <!-- INFO CANVAS -->
   <!-- OFFCANVAS -->
-  <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
-    <div class="offcanvas-header container">
-      <h5 class="offcanvas-title" id="offcanvasTopLabel">
-        <a class="navbar-brand" href="#">
-               <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
- <!-- Replace with actual logo path -->
-        </a>
-      </h5>
-      <button type="button" class="text-white  bg-transparent  border-0" style="color: white !important;"
-        data-bs-dismiss="offcanvas" aria-label="Close">
-        <i class="fa-solid fa-xmark  text-white fs-1 "></i>
-      </button>
-    </div>
-    <div class="offcanvas-body topoff container d-flex flex-lg-row align-items-center flex-column">
-      <div class="col-lg-6 col-12">
+<div class="offcanvas offcanvas-end offcanvas-top1 who" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+  <div class="offcanvas-header container">
+    <h5 class="offcanvas-title" id="offcanvasRightLabel">
+      <a class="navbar-brand" href="#">
+        <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
+        <!-- Replace with actual logo path -->
+      </a>
+    </h5>
+    <button type="button" class="text-white1 bg-transparent border-0" style="color: white !important;" data-bs-dismiss="offcanvas" aria-label="Close">
+      <i class="fa-solid fa-xmark text-white1 fs-1 "></i>
+    </button>
+  </div>
+  <div class="offcanvas-body topoff container d-flex flex-lg-row align-items-center flex-column">
+    <div class="col-lg-6 col-12">
+      <ul class="navbar-nav me-auto mt-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="index.html">Home</a>
+          <span class="navhover"></span>
+        </li>
+      <!--  -->
 
-        <ul class="navbar-nav me-auto mt-2 mb-lg-0 ">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="index.html">Home</a>
-            <span class="navhover"></span>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Service</a>
-            <span class="navhover"></span>
+      <!--  -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+            Service
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <li><a class="dropdown-item" href="AiProductSolution.html">AI Product Solution</a></li>
+            <li><a class="dropdown-item" href="GrcSolution.html">GRC Solutions</a></li>
+            <li><a class="dropdown-item" href="Web-AppDevelopment.html">Web & App Development</a></li>
+            <li><a class="dropdown-item" href="EcommerceSolution.html">Ecommerce Solutions</a></li>
+            <li><a class="dropdown-item" href="DigitalMarketing.html">Digital Marketing</a></li>
+          </ul>
+        </li>
+        
 
-          </li>
-
-          <li class="nav-item dropdown">
-            <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
-            <span class="navhover"></span>
-
-          </li>
-          <!--  -->
-
-          <!--  -->
-          <li class="nav-item">
-            <a class="nav-link" href="blog.html">Portfolio</a>
-            <span class="navhover"></span>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact Us</a>
-            <span class="navhover"></span>
-          </li>
-        </ul>
-        <div>
-          <button class="lets-talk-btn col-lg-5 col-6 px-2 py-2 mt-5 text-white ">Lets Talk
-            <span class="lets-talk-btn-hover"></span>
-          </button>
-        </div>
-        <div class="d-flex top-header-icon mt-5 pb-3 mt-2">
-          <a href="#" class="text-white mx-2"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="text-white mx-2"><i class="fab fa-facebook"></i></a>
-          <a href="#" class="text-white mx-2"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="text-white mx-2"><i class="fab fa-linkedin"></i></a>
-        </div>
-      </div>
+        <li class="nav-item">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          <span class="navhover"></span>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact Us</a>
+          <span class="navhover"></span>
+        </li>
+      </ul>
       <div>
+        <button class="lets-talk-btn col-lg-5 col-6 px-2 py-2 mt-5 text-white1 ">Lets Talk
+          <span class="lets-talk-btn-hover"></span>
+        </button>
       </div>
-      <div class="col-lg-6 col-12">
-        <h2 class="display-2 text-white text-end fw-bold top-nav-heading">EXPLORE PAGES</h2>
-
+      <div class="d-flex top-header-icon mt-5 pb-3 mt-2">
+        <a href="#" class="text-white1 mx-2"><i class="fab fa-twitter"></i></a>
+        <a href="#" class="text-white1 mx-2"><i class="fab fa-facebook"></i></a>
+        <a href="#" class="text-white1 mx-2"><i class="fab fa-instagram"></i></a>
+        <a href="#" class="text-white1 mx-2"><i class="fab fa-linkedin"></i></a>
       </div>
+    </div>
+    <div>
+    </div>
+    <div class="col-lg-6 col-12">
+      <h2 class="display-2 text-white1 text-end fw-bold top-nav-heading">EXPLORE PAGES</h2>
     </div>
   </div>
+</div>
   <!-- OFFCANVAS -->
   <!-- CONTACT-US -->
-  <div class="py-5"></div>
-  <div
-    class="container-fluid d-flex flex-lg-row py-5   text-white1 align-items-lg-center flex-column mt-lg-0 mt-5 justify-content-between">
-    <div class="d-flex flex-lg-row flex-column align-items-lg-center ">
-      <h2 class="strk text-start position-relative ">Contact
-        Us <svg xmlns="http://www.w3.org/2000/svg" width="50" class="arr" height="6" viewBox="0 0 50 6">
-          <path d="M50 3L45 0.113249V5.88675L50 3ZM0 3.5H45.5V2.5H0V3.5Z"></path>
-        </svg></span></h2>
-
-
-    </div>
-    <div class="d-flex text-dark1 justify-content-end col-lg-4 mt-5 mt-lg-0">
-      <h4 class="text-end text-capitalize">Connect with us for inquiries, partnerships, or support.</h4>
-    </div>
+  <div class="container-fluid bg d-flex flex-column align-items-center justify-content-center  h20 pb-0"
+    id="home">
+    <h2>B</h2>
+ <h5 class="text-white  fw-bold">Home / Schedule Meeting</h5>
   </div>
-  <div class="container-fluid who d-flex flex-lg-row flex-column justify-content-between  mx-0  py-5 contact-page">
-
-    <div class="col-lg-5 d-flex flex-row align-items-center col-12  rounded ">
-      <div class="col-12  d-flex flex-column px-1 rounded ">
-
-        <h2 class="fs-1  text-white1">Let’s working together</h2>
-        <p class="col-text fs-6 py-4 fw-normal locte  text-white1">
-          Thank you for your interest in Attach Web Agency. We're excited to hear from you and discuss...us</span></p>
-        <div class="d-flex flex-column">
-
-          <div
-            class="col-lg-10 col-12 my-2 borders p-2 rounded-3 d-flex flex-lg-row flex-column justify-content-center justify-content-lg-start align-items-center shadow-sm   adbook">
-            <i class="fa-solid fa-location-dot fs-4 mt-2 bg-col text-white1 p-3  rounded"></i>
-
-            <div
-              class="ps-lg-3 d-flex text-white1 flex-column justify-content-center align-items-lg-start  align-items-center">
-              <h5 class="mt-2  ps-lg-2">Location</h5>
-              <span class="col-text locte ps-lg-2 text-lg-start text-center">
-                P. O. Box 409, 9300 Conroy
-                Windermere, Windermere, FL-34786, USA</span>
-
-            </div>
-          </div>
-
-          <div
-            class="col-lg-10 col-12 my-2 borders p-2 rounded-3 text-white1 d-flex flex-lg-row flex-column justify-content-center justify-content-lg-start align-items-center shadow-sm   adbook">
-
-            <i class="fa-solid fa-headset fs-4 mt-2 bg-col text-white1 p-3 rounded"></i>
-            <div class="ps-lg-3 d-flex flex-column justify-content-center align-items-lg-start  align-items-center">
-              <h5 class="mt-2">Support</h5>
-              <span class="col-text locte ps-lg-2 text-lg-start text-center">
-                + 1 (689) 276-4636</span>
-
-            </div>
-          </div>
-          <div
-            class="col-lg-10 col-12 my-2 borders p-2 rounded-3 text-white1 d-flex flex-lg-row flex-column justify-content-center justify-content-lg-start align-items-center shadow-sm   adbook">
-
-
-            <i class="fa-solid fa-envelope fs-4 mt-2 bg-col text-white1 p-3 rounded"></i>
-            <div class="ps-lg-3 d-flex flex-column justify-content-center align-items-lg-start  align-items-center">
-              <h5 class="mt-2">Email</h5>
-              <span class="col-text locte ps-lg-2 text-lg-start text-center ">
-                info@aisystemsoft.com
-              </span>
-
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-6 bg1 py-5 col-12 d-flex flex-column align-items-start  formm px-4">
-      <h4 class="text-white1 text-end col-12 pb-3">We're here to assist you –<br> fill out the form below</h4>
-      <form class="mt-3" id="form">
-        <div class="row g-3">
-          <div class="col-md-6">
-            <input type="text" class="form-control form-control1" id="firstName" placeholder="First Name" required>
-          </div>
-          <div class="col-md-6">
-            <input type="text" class="form-control form-control1" id="lastName" placeholder="Last Name" required>
-          </div>
-          <div class="col-md-6">
-            <input type="tel" class="form-control form-control1" id="phoneNumber" placeholder="Phone Number" required>
-          </div>
-
-          <div class="col-md-6">
-            <input type="email" class="form-control form-control1" id="email" placeholder="Your Email" required>
-          </div>
-          <div class="col-md-12">
-            <select class="form-select" id="queryTopic" aria-label="Default select example">
-              <option selected>Select Queary bTopic</option>
-              <option value="AI Products & Solutions">AI Products & Solutions</option>
-              <option value="GRC Solutions">GRC Solutions</option>
-              <option value="Web & App Development">Web & App Development</option>
-              <option value="Ecommerce Solutions">Ecommerce Solutions</option>
-              <option value="Digital Marketing">Digital Marketing</option>
-
-            </select>
-
-          </div>
-          <div class="col-12">
-            <textarea class="form-control form-control1" id="message" rows="4"
-              placeholder="Write your message here..."></textarea>
-          </div>
-          <div class="col-12 text-center mb-5">
-            <button type="submit" id="contact-form"
-              class="mt-3 mx-auto who text-white1 btn3 col-lg-4 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
-              SEND NOW
-              <i class="fa-solid fa-paper-plane icon-hover"></i>
-
-            </button>
-          </div>
-        </div>
-      </form>
-    </div>
-
-
-  </div>
-
 
 
 
