--- a/AiProductSolution.html
+++ b/AiProductSolution.html
@@ -239,10 +239,10 @@
             <div class="about-section text-start">
                 <h2 class="fw-bolder py-3 text-white">
                 </h2>
-                <h5 class="text-white">
-                    AI-GRC-Software Development Solution .
-                    We Develop Secure & Intelligent Solutions
-                </h5>
+                <h5 class="text-white1 fw-light">
+          AI-GRC-Software Development Solution 
+          We Develop Secure & Intelligent Solutions
+        </h5>
             </div>
 
             <!-- Contact Info -->
