--- a/AiProductSolution.html
+++ b/AiProductSolution.html
@@ -49,7 +49,9 @@
             background-position: right top;
             background-size: cover;
             object-fit: cover;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.692), rgba(0, 0, 0, 0.418)), url("Assets/Banner-Image/banner-img-6.png");
+            /* background-image: linear-gradient(rgba(0, 0, 0, 0.692), rgba(0, 0, 0, 0.418)), url("Assets/Banner-Image/banner-img-6.png"); */
+            background-image: linear-gradient(rgba(129, 11, 11, 0.692), rgba(139, 12, 12, 0.418)), url("Assets/Banner-Image/banner-img-6.png");
+        
         }
 
         .para-col {
